# agent_zero

./: .actrc  .env.test  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI_STATUS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.test  MANIFEST.in  README.md  README.md.bak  WORKFLOW_STATUS.md  coverage.json  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  setup-git-lfs.sh  setup.py  test_build.sh
.github/: .yamllint.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  deployment-monitor.yml  documentation.yml  publish-dev.yml  publish-prerelease.yml  publish-stable.yml  publish.yml  quality.yml  security.yml
agent_one/: __init__.py  mcp_server.py  utils.py
agent_one/monitoring/: error_analysis.py  insert_operations.py  parts_merges.py  query_performance.py  resource_usage.py  system_components.py  table_statistics.py  utility.py
agent_zero/: README_LOGGING.md  __init__.py  database_logger.py  main.py  mcp_env.py  mcp_server.py  mcp_tracer.py  modern_python.py  server_config.py  standalone_server.py  utils.py
agent_zero/ai_diagnostics/: __init__.py  bottleneck_detector.py  pattern_analyzer.py  performance_advisor.py
agent_zero/ai_ml/: __init__.py  performance_predictor.py
agent_zero/config/: __init__.py  unified.py
agent_zero/enterprise/: __init__.py  cloud_native.py  security_compliance.py
agent_zero/monitoring/: __init__.py  error_analysis.py  hardware_diagnostics.py  insert_operations.py  parts_merges.py  performance_diagnostics.py  profile_events_core.py  query_performance.py  resource_usage.py  storage_cloud_diagnostics.py  system_components.py  table_statistics.py  utility.py
agent_zero/performance/: __init__.py  scalability.py
agent_zero/server/: __init__.py  backup.py  client.py  core.py  errors.py  health.py  logging.py  metrics.py  performance.py  production.py  query.py  tools.py  tracing.py
agent_zero/transport/: __init__.py  mcp_2025.py
configs/: claude-code.json  claude-desktop.json  cursor.json  standalone-server.json  windsurf.json
configs/environments/: development.json  production.json  staging.json
docker/: Dockerfile  Dockerfile.test  docker-compose.yml
docs/: 2025-features.md  2025-migration-guide.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DOCUMENTATION_STANDARDS.md  README.md  USER_GUIDE.md  index.md  logging.md  standalone-server.md
docs/api/: openapi.yaml
docs/assets/images/: .gitkeep
docs/compliance/: SECURITY_POLICY.md  SOC2_COMPLIANCE.md
docs/overrides/: .gitkeep
docs/testing/: README.md  coverage.md  mcp-endpoints.md
examples/: agent_zero_2025_showcase.py  architecture_demo.py  pattern_analysis_example.py  performance_advisor_example.py  performance_diagnostics_example.py  production_server_example.py  storage_diagnostics_example.py
scripts/: clear-all-caches.py  generate-security-summary.py  generate_api_docs.py  generate_sdk_docs.py  generate_sitemap.py  install.sh  run-tests.sh  test-actions.sh  test-ci-cd-local.py  test-dependencies.py  test-multi-python.py  update_docs.sh  validate-configuration.py  validate-cross-references.py  validate_openapi.py  version-manager.py
tests/: __init__.py  conftest.py  mock_monitoring_endpoints.py  mock_query_metrics.py  mock_server_config.py  test_additional_coverage_boost.py  test_ai_diagnostics_comprehensive.py  test_ai_diagnostics_comprehensive_phase3.py  test_bottleneck_detector_comprehensive.py  test_bottleneck_detector_comprehensive_phase2.py  test_comprehensive_mcp_tools.py  test_core_modules.py  test_cursor_ide_support.py  test_error_analysis.py  test_final_coverage_push.py  test_hardware_diagnostics_comprehensive.py  test_hardware_diagnostics_comprehensive_phase1.py  test_insert_operations.py  test_integration_comprehensive.py  test_isolated_server_config.py  test_largest_modules_focused.py  test_main.py  test_main_comprehensive.py  test_main_module_comprehensive.py  test_mcp_core.py  test_mcp_monitoring_tools.py  test_mcp_server_integration.py  test_mcp_tools_comprehensive.py  test_mock_server_config.py  test_monitoring_comprehensive.py  test_monitoring_endpoints.py  test_monitoring_functions_simple.py  test_monitoring_modules.py  test_parts_merges.py  test_parts_merges.py.disabled  test_pattern_analyzer.py  test_pattern_analyzer_comprehensive.py  test_pattern_analyzer_comprehensive_phase2.py  test_performance_advisor_comprehensive_phase2.py  test_performance_diagnostics.py  (+23 more)
tests/integration/: test_clickhouse_integration.py
tests/load/: test_load_testing.py
tests/stubs/: monitoring_endpoints.py
