[project]
name = "agent-zero"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for monitoring, analyzing, and managing ClickHouse databases"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.14",
    "clickhouse-connect>=0.8.15",
    "mcp[cli]>=1.4.1",
    "prometheus-client>=0.21.1",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "structlog>=25.2.0",
    "tenacity>=9.0.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
[tool.setuptools]
packages = ["agent_zero"]
